<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/componen1"
                android:id="@+id/img_register_1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:layout_margin="20dp"
                android:id="@+id/row_back_register"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_register_1"
                android:text="@string/Pembuka_register"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/black"
                android:id="@+id/text_register"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_register"
                android:text="@string/pengantar_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                android:id="@+id/text_pengantar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_input"
                android:layout_below="@+id/text_pengantar">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="Enter Your Full Name"
                        android:layout_marginBottom="15dp"
                        android:paddingLeft="10dp"
                        android:background="@drawable/text_input_shape"
                        android:id="@+id/register_input_name"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/placeholder_email"
                        android:paddingLeft="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/text_input_shape"
                    android:id="@+id/register_input_email"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="Create Password"
                        android:paddingLeft="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/text_input_shape"
                    android:id="@+id/register_input_password"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/placehoder_pass_confirm"
                        android:paddingLeft="10dp"
                        android:background="@drawable/text_input_shape"
                        android:id="@+id/register_input_confirmPass"/>
            </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/register"
        android:textSize="20sp"
        android:padding="7dp"
        android:textColor="@color/white"
        android:layout_below="@id/layout_input"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/btn_register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alrady have on account?"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/spanColor"
            android:layout_marginLeft="3dp"
            android:id="@+id/txt_to_login"/>
    </LinearLayout>





</RelativeLayout>